# Topology-experiments

./: DESIGN_DECISIONS.md  README.md  analyze_barbell_sweep.py  analyze_pilot.py  analyze_results.py  analyze_sudoku.py  compute_barbell_lambda2.py  compute_lambda2.py  run_barbell_sweep.sh  run_experiment.sh  run_pilot.sh  run_sudoku.sh  topologies.py  topology-experiments.cabal
docs/: SUDOKU.md  combinatorial_games_ga.md  maze_ga.md
experimental_results/: README.md
experimental_results/onemax_transient_10runs/: README.md
experimental_results/pilot_maze_15x15/: README.md
experimental_results/pilot_maze_8x8/: README.md
results/barbell_sweep/: barbell-12_seed1337.csv  barbell-12_seed2718.csv  barbell-12_seed42.csv  barbell-16_seed1337.csv  barbell-16_seed2718.csv  barbell-16_seed42.csv  barbell-1_seed1337.csv  barbell-1_seed2718.csv  barbell-1_seed42.csv  barbell-2_seed1337.csv  barbell-2_seed2718.csv  barbell-2_seed42.csv  barbell-4_seed1337.csv  barbell-4_seed2718.csv  barbell-4_seed42.csv  barbell-8_seed1337.csv  barbell-8_seed2718.csv  barbell-8_seed42.csv
results/jaccard_maze_15x15/: README.md  barbell_seed1337.csv  barbell_seed2718.csv  barbell_seed42.csv  complete_seed1337.csv  complete_seed2718.csv  complete_seed42.csv  disconnected_seed1337.csv  disconnected_seed2718.csv  disconnected_seed42.csv  hypercube_seed1337.csv  hypercube_seed2718.csv  hypercube_seed42.csv  random-regular_seed1337.csv  random-regular_seed2718.csv  random-regular_seed42.csv  ring_seed1337.csv  (+8 more)
src/: Domain.hs  IslandGA.hs  Main.hs  Maze.hs  Sudoku.hs  UnionFind.hs
(+74 files in other folders)
