cabal-version:      2.4
name:               topology-experiments
version:            0.1.0.0
synopsis:           Island-model GA with configurable migration topologies
license:            MIT
build-type:         Simple

executable topology-sim
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Domain
                  , Maze
                  , IslandGA
                  , UnionFind
  ghc-options:      -O2 -threaded -rtsopts "-with-rtsopts=-N"
  build-depends:    base       >= 4.14 && < 5
                  , vector
                  , random
                  , containers
                  , deepseq
                  , bytestring
                  , time
                  , directory
